<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>map-ads</artifactId>
        <groupId>dev.cerus</groupId>
        <version>1.2.4</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.cerus.mapads</groupId>
    <artifactId>plugin</artifactId>

    <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </repository>
        <repository>
            <id>sonatype-oss-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <!-- Spigot stuff -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.16.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!--<dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>craftbukkit</artifactId>
            <version>1.17.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>-->
        <dependency>
            <groupId>co.aikar</groupId>
            <artifactId>acf-bukkit</artifactId>
            <version>0.5.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>4.9.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bukkit</artifactId>
            <version>4.0.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>

        <!-- maps & map-ads dependencies -->
        <dependency>
            <groupId>dev.cerus.maps</groupId>
            <artifactId>common</artifactId>
            <version>2.0.0-SNAPSHOT-pre4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.cerus.maps</groupId>
            <artifactId>plugin</artifactId>
            <version>2.0.0-SNAPSHOT-pre4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.cerus.mapads</groupId>
            <artifactId>discord-bot</artifactId>
            <version>${version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Misc -->
        <dependency>
            <groupId>com.github.cerus-plugins</groupId>
            <artifactId>yamif</artifactId>
            <version>341ba44175</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.wesjd</groupId>
            <artifactId>anvilgui</artifactId>
            <version>1.5.3-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.jodah</groupId>
            <artifactId>expiringmap</artifactId>
            <version>0.5.10</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.cerus</groupId>
            <artifactId>floyd-steinberg-dithering</artifactId>
            <version>89a6d77f5e</version>
            <scope>compile</scope>
        </dependency>

        <!-- Libraries that will be downloaded from Spigot -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.36.0.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mariadb.jdbc</groupId>
            <artifactId>mariadb-java-client</artifactId>
            <version>2.7.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- Metrics -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>2.2.1</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${parent.artifactId}-${version}</finalName>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0-SNAPSHOT</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>false</minimizeJar>
                            <relocations>
                                <relocation>
                                    <pattern>net.jodah.expiringmap</pattern>
                                    <shadedPattern>dev.cerus.mapads.thirdparty.expiringmap</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>co.aikar.commands</pattern>
                                    <shadedPattern>dev.cerus.mapads.thirdparty.acf</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>co.aikar.locales</pattern>
                                    <shadedPattern>dev.cerus.mapads.thirdparty.acflocales</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>dev.cerus.mapads.thirdparty.bstats</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>club.minnced.discord.webhook</pattern>
                                    <shadedPattern>dev.cerus.mapads.thirdparty.discord</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.zaxxer.hikari</pattern>
                                    <shadedPattern>dev.cerus.mapads.thirdparty.hikaricp</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.kyori.adventure</pattern>
                                    <shadedPattern>dev.cerus.mapads.thirdparty.adventure</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.wesjd.anvilgui</pattern>
                                    <shadedPattern>dev.cerus.mapads.thirdparty.anvilgui</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>